--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.21.0",
+    "three": "^0.160.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
